--- a/custom_components/engie_be/translations/en.json
+++ b/custom_components/engie_be/translations/en.json
@@ -2,7 +2,7 @@
     "config": {
         "step": {
             "user": {
-                "description": "Enter your Engie Belgium account credentials and customer number. An SMS with a verification code will be sent to your registered phone number.",
+                "description": "Enter your ENGIE Belgium account credentials and customer number. An SMS with a verification code will be sent to your registered phone number.",
                 "data": {
                     "username": "Email address",
                     "password": "Password",
@@ -11,7 +11,7 @@
                     "mfa_method": "Two-factor authentication method"
                 },
                 "data_description": {
-                    "customer_number": "Your Engie Belgium customer/business agreement number.",
+                    "customer_number": "Your ENGIE Belgium customer/business agreement number.",
                     "client_id": "OAuth client ID. Only change this if you know what you are doing.",
                     "mfa_method": "Choose how you want to receive your verification code. Only SMS is supported at this time."
                 }
@@ -25,7 +25,7 @@
         },
         "error": {
             "auth": "Invalid username or password.",
-            "connection": "Unable to connect to Engie Belgium.",
+            "connection": "Unable to connect to ENGIE Belgium.",
             "unknown": "An unknown error occurred.",
             "invalid_mfa_code": "Invalid verification code. Please try again.",
             "mfa_email_not_supported": "Email-based two-factor authentication is not supported yet. Please select SMS."
