--- a/custom_components/engie_be/translations/en.json
+++ b/custom_components/engie_be/translations/en.json
@@ -2,18 +2,16 @@
     "config": {
         "step": {
             "user": {
-                "description": "Enter your ENGIE Belgium account credentials and customer number. An SMS with a verification code will be sent to your registered phone number.",
+                "description": "Enter your ENGIE Belgium account credentials and customer number. A verification code will be sent to your registered phone number via SMS.",
                 "data": {
                     "username": "Email address",
                     "password": "Password",
                     "customer_number": "Customer number",
-                    "client_id": "Client ID",
-                    "mfa_method": "Two-factor authentication method"
+                    "client_id": "Client ID"
                 },
                 "data_description": {
                     "customer_number": "Your ENGIE Belgium customer/business agreement number.",
-                    "client_id": "OAuth client ID. Only change this if you know what you are doing.",
-                    "mfa_method": "Choose how you want to receive your verification code. Only SMS is supported at this time."
+                    "client_id": "OAuth client ID. Only change this if you know what you are doing."
                 }
             },
             "mfa": {
@@ -27,11 +25,23 @@
             "auth": "Invalid username or password.",
             "connection": "Unable to connect to ENGIE Belgium.",
             "unknown": "An unknown error occurred.",
-            "invalid_mfa_code": "Invalid verification code. Please try again.",
-            "mfa_email_not_supported": "Email-based two-factor authentication is not supported yet. Please select SMS."
+            "invalid_mfa_code": "Invalid verification code. Please try again."
         },
         "abort": {
             "already_configured": "This account is already configured."
+        }
+    },
+    "options": {
+        "step": {
+            "init": {
+                "description": "Configure the update interval for fetching energy prices from ENGIE Belgium.",
+                "data": {
+                    "update_interval": "Update interval"
+                },
+                "data_description": {
+                    "update_interval": "How often to fetch new price data from the ENGIE Belgium API, in hours."
+                }
+            }
         }
     },
     "entity": {
